[gd_scene load_steps=4 format=3 uid="uid://85ho1813kvpx"]

[ext_resource type="Script" path="res://scenes/player/player_manager.gd" id="1_gs8ye"]
[ext_resource type="PackedScene" uid="uid://cpeigalq6ps85" path="res://scenes/player/cb_player.tscn" id="1_n8w7f"]
[ext_resource type="PackedScene" uid="uid://vp83c8184gjs" path="res://scenes/player/UI/player_ui.tscn" id="3_mvbqc"]

[node name="PlayerManager" type="Node2D"]
script = ExtResource("1_gs8ye")

[node name="cbPlayer" parent="." instance=ExtResource("1_n8w7f")]

[node name="cbPlayer2" parent="." instance=ExtResource("1_n8w7f")]
position = Vector2(154, 3)
locked = true

[node name="camPlayer" type="Camera2D" parent="."]
offset = Vector2(0, -300)

[node name="PlayerUI" parent="." instance=ExtResource("3_mvbqc")]
